--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,28 +11,27 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os.imageName }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         rust_toolchain: ["stable"]
-        os:
-          - imageName: ubuntu-18.04
-            target: x86_64-unknown-linux-gnu
-            profile: linux
-          - imageName: "macOS-latest"
-            target: x86_64-apple-darwin
-            profile: mac
-          - imageName: "windows-2019"
-            target: x86_64-pc-windows-msvc
-            profile: windows
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-      - uses: actions-rs/toolchain@v1
+      - name: Set up Rust
+        run: rustup show
+      - name: Free Disk Space (Ubuntu)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        uses: jlumbroso/free-disk-space@main
         with:
-          toolchain: ${{ matrix.rust_toolchain }}
-          override: true
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: false
+          swap-storage: true
       - uses: davidB/rust-cargo-make@v1
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Run tests
         run: cargo make --profile ci-static-code-analysis-tasks --env TARGET=${{matrix.os.target}} ci-flow
         env:
