--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "vega_lite_5"
 version = "0.6.1-dev"
-authors = ["David Bernard <david.bernard.31@gmail.com>", "François Mockers <mockersf@gmail.com>", "Thomas Aubry <github.thomaub@gmail.com>"]
+authors = [
+    "David Bernard <david.bernard.31@gmail.com>",
+    "François Mockers <mockersf@gmail.com>",
+    "Thomas Aubry <github.thomaub@gmail.com>",
+    "ptiza",
+]
 edition = "2021"
 license = "Apache-2.0"
 description = "rust api for vega-lite v5"
@@ -11,17 +16,19 @@ categories = ["visualization"]
 keywords = ["visualization", "plot", "vega", "graphs", "charts"]
 
 [dependencies]
-serde = {version = "1.0", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 derive_builder = "0.9"
-derive_more = {version = "0.99", default-features = false, features = ["from"]}
-showata = {version = "0.3", optional = true}
-anyhow = {version = "1.0", optional = true }
-ndarray = {version = "0.15", features = ["serde"], optional = true}
-csv = {version = "1.1", optional = true}
-rulinalg = {version ="0.4", optional=true}
-nalgebra = {version ="0.23", features = ["serde-serialize"], optional=true}
-polars = {version = "0.28", features = ["lazy"], optional = true}
+derive_more = { version = "0.99", default-features = false, features = [
+    "from",
+] }
+showata = { version = "0.3", optional = true }
+anyhow = { version = "1.0", optional = true }
+ndarray = { version = "0.15", features = ["serde"], optional = true }
+csv = { version = "1.1", optional = true }
+rulinalg = { version = "0.4", optional = true }
+nalgebra = { version = "0.23", features = ["serde-serialize"], optional = true }
+polars = { version = "0.28", features = ["lazy"], optional = true }
 
 [dev-dependencies]
 csv = "1.1"
@@ -41,3 +48,9 @@ required-features = ["rulinalg"]
 [[example]]
 name = "from_polars"
 required-features = ["polars"]
+
+[package.metadata.release]
+pre-release-commit-message = ":rocket: (cargo-release) version {{version}}"
+tag-prefix = ""
+tag-name = "{{prefix}}{{version}}"
+tag-message = ":bookmark: {{version}}"
