--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,23 +16,29 @@ categories = ["visualization"]
 keywords = ["visualization", "plot", "vega", "graphs", "charts"]
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-derive_builder = "0.9"
-derive_more = { version = "0.99", default-features = false, features = [
-    "from",
-] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+derive_builder = "0.20"
+derive_more = { version = "2", default-features = false, features = ["from"] }
 showata = { version = "0.3", optional = true }
-anyhow = { version = "1.0", optional = true }
-ndarray = { version = "0.15", features = ["serde"], optional = true }
-csv = { version = "1.1", optional = true }
-rulinalg = { version = "0.4", optional = true }
-nalgebra = { version = "0.23", features = ["serde-serialize"], optional = true }
-polars = { version = "0.28", features = ["lazy"], optional = true }
+anyhow = { version = "1", optional = true }
+ndarray = { version = "0.16", default-features = false, features = [
+    "serde",
+], optional = true }
+csv = { version = "1", default-features = false, optional = true }
+rulinalg = { version = "0.4", default-features = false, optional = true }
+nalgebra = { version = "0.33", default-features = false, features = [
+    "serde-serialize",
+], optional = true }
+polars = { version = "0.46", default-features = false, features = [
+    "dtype-datetime",
+    "lazy",
+], optional = true }
 
 [dev-dependencies]
-csv = "1.1"
-ndarray-rand = "0.14"
+csv = { version = "1", default-features = false }
+ndarray-rand = { version = "0.15", default-features = false }
+polars = { version = "0.46", default-features = false, features = ["csv"] }
 
 [features]
 show_vega = ["showata", "anyhow"]
